# musikfabrik

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
notebooks/: audio_feature_extraction.py  composition_workspace.py  dissonance_and_scales.py  fingering_charts.py  generate_scales.py  musicfabrik.py  sample_processing.py  stretched_ddsp.py
other/lily/: .gitignore  horn-concert.pdf.dvc  horn.pdf.dvc  overtones.ly  overtones.pdf.dvc  score.pdf.dvc  trumpet-concert.pdf.dvc  trumpet.pdf.dvc
other/sc/: oscbank-optimized.scd  oscbank.scd
src/composition/: common.py  instrument.py
src/musikfabrik/: __init__.py  audio_features.py  ddsp_helpers.py  dissonance_analysis.py  seth.py
src/performer/models/: ddsp_module.py
src/performer/models/components/: controller.py  harmonic_oscillator.py
src/performer/utils/: features.py
