[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.9.4,<0.10" ]

[project]
name = "musikfabrik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "kureta", email = "skureta@gmail.com" },
]
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "dvc[s3,ssh]>=3.63",
  "einx>=0.3",
  "hydra-core~=1.3.2",
  "hydra-zen~=0.10.0",
  "librosa>=0.11",
  "lightning~=2.1.0",
  "marimo>=0.17",
  "matplotlib>=3.10.7",
  "numpy>=1.23,<2",
  "rich>=14.2",
  "torch~=2.0.0",
  "torchaudio~=2.0.1",
  "torchcrepe",
  "wandb~=0.14.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.7",
  "isort>=7",
  "pytest>=8.4.2",
  "python-lsp-ruff>=2.3",
  "python-lsp-server>=1.13.1",
  "ruff>=0.14.1",
  "ty>=0.0.1a23",
]

[tool.uv.sources]
torchcrepe = { git = "https://github.com/kureta/torchcrepe.git" }

[tool.marimo.runtime]
watcher_on_save = "autorun"
